# airow

./: .clang-tidy  .gitignore  .rgr-evidence.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.agents/skills/: README.md
.agents/skills/karpathy-guidelines/: SKILL.md
.agents/skills/major-change-loop/: SKILL.md
.agents/skills/release-doc-sync/: SKILL.md
.agents/skills/simulation-evidence-design/: SKILL.md
.agents/skills/tdd-loop/: SKILL.md
.agents/skills/test-lanes/: SKILL.md
.agents/skills/trace-maintenance/: SKILL.md
.agents/skills/unit-test-design/: SKILL.md
.agents/skills/work-lanes/: SKILL.md
.agents/skills/workflow-audit/: SKILL.md
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
docs/ai/: CODEX_PROCESS_OPTIMIZATION_EXECUTION_PLAN.md  DECISIONS.md  HANDOFF.md  ROADMAP.md  SESSION_CONTEXT.md
docs/ai/archive/: DECISIONS_INDEX.md  DECISIONS_pre_2026-04-02.md  DECISIONS_pre_2026-04-18.md  DECISIONS_pre_2026-04-27.md  HANDOFF_pre_full_simulation_2026-04-24.md  README.md
docs/archive/: CHANGELOG_pre_context_cleanup_2026-04-26.md  README.md
docs/process/: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_HEALTH.md  ARCHITECTURE_POLICY.md  CALIBRATION_PROVENANCE.md  CAPABILITY_MATRIX.md  DEPENDENCY_RULES.md  FIDELITY_GAP_MAP.md  LLM_DRIFT_REVIEW.md  MAINTENANCE.md  MODEL_FIDELITY.md  NUMERICS_POLICY.md  QUALITY_SCORECARD.md  REQUIREMENTS.md  REQUIREMENTS_FULL_SIMULATION_EXTENSION.md  ROADMAP_FULL_SIMULATION.md  SCENARIOS.md  STATE_CONVENTIONS.md  TECHNOLOGY_STACK.md  TEST_STRATEGY.md  TRACEABILITY.md  VISUALIZATION_ARTIFACT.md  WORKFLOW.md
docs/superpowers/plans/: 2026-04-18-slice-2-closure.md
examples/: README.md  run_example.sh
examples/calm_water_stroke/: config.json
examples/passive_float/: config.json
examples/tow_test/: config.json
include/: AGENTS.md
include/project/: string_utils.hpp
include/project/aero/: baseline_providers.hpp  provider.hpp  (+1 more)
scenarios/: calm_water_stroke.json  crosswind_stroke.json  gust_headwind_stroke.json  headwind_stroke.json  passive_float.json  performance_budgets.json  technique_comparison_actuation_modes.json  tow_test.json
scripts/: AGENTS.md  build.sh  check_rgr_evidence.sh  coverage.sh  coverage_ratchet.sh  depcheck.sh  format.sh  lint.sh  lint_tests.sh  maintenance.sh  project_stats.py  regression.sh  setup.sh  setup_chrono.sh  test.sh  test_aux.sh  test_gcc.sh  test_perf.sh  test_performance.sh  test_sanitized.sh  test_tdd.sh  validation_output.sh  verify.sh
skills/: README.md
skills/template-major-change-loop/: SKILL.md
skills/template-release-doc-sync/: SKILL.md
skills/template-tdd-loop/: SKILL.md
skills/template-test-lanes/: SKILL.md
skills/template-trace-maintenance/: SKILL.md
src/: AGENTS.md
src/app/: main.cpp
src/lib/: string_utils.cpp
tests/: AGENTS.md
tests/aux/: include_aero_providers.cpp  include_backend_catalog.cpp  include_calibration_artifact.cpp  include_cli.cpp  include_geometry.cpp  include_hydro_provider.cpp  include_hydro_providers.cpp  include_mechanics_state.cpp  include_run_analysis.cpp  include_run_output.cpp  include_run_result.cpp  include_scenario_harness.cpp  include_simulation_run.cpp  include_simulator_config.cpp  include_state_advancement.cpp
tests/fixtures/: r071_compact_trust_report.txt
tests/integration/: AGENTS.md  README.md  test_aero_runtime_integration.cpp  test_batch_orchestrator_integration.cpp  test_calibration_integration.cpp  test_fidelity_runtime_integration.cpp  test_hydro_runtime_integration.cpp  test_orchestrator_integration.cpp  test_propulsion_metrics_integration.cpp  test_run_outputs_integration.cpp  test_scenario_performance_integration.cpp  test_simulator_config_integration.cpp  test_string_utils_integration.cpp
tests/system/: AGENTS.md  README.md  test_batch_simulation_system.cpp  test_calibration_system.cpp  test_calm_water_scenario_system.cpp  test_examples_system.cpp  test_fidelity_packet_system.cpp  test_headless_outputs_system.cpp  test_headless_simulation_system.cpp  test_performance_lane_system.cpp  test_run_analysis_capability_system.cpp  test_run_analysis_system.cpp  test_run_comparison_system.cpp  test_scenario_harness_system.cpp  test_simulator_config_system.cpp  test_string_utils_system.cpp  test_technique_comparison_scenario_system.cpp  test_v0_1_closure_system.cpp  test_wind_scenario_system.cpp
tests/unit/: AGENTS.md  README.md  test_aero_runtime_models.cpp  test_batch_simulation.cpp  test_batch_simulation_validation.cpp  test_calibration_artifact.cpp  test_calibration_artifact_v2.cpp  test_energy_accounting.cpp  test_hydro_runtime_actuation.cpp  test_hydro_runtime_models.cpp  test_measured_trial_branches.cpp  test_measurement_artifacts.cpp  test_measurement_bundle_branches.cpp  test_propulsion_metrics.cpp  test_provider_capability_metadata.cpp  test_run_analysis.cpp  test_run_outputs.cpp  test_run_outputs_config.cpp  test_run_outputs_hdf5.cpp  test_run_outputs_truth_model.cpp  test_run_outputs_visualization.cpp  test_run_outputs_wind.cpp  test_scenario_harness.cpp  test_scenario_harness_additional.cpp  test_scenario_harness_crosswind.cpp  test_scenario_harness_headwind.cpp  test_scenario_harness_loader.cpp  test_scenario_performance_budgets.cpp  test_scenario_technique_comparison.cpp  test_simulation_run.cpp  test_simulation_run_advancer.cpp  test_simulation_run_cli.cpp  test_simulation_run_cli_batch.cpp  test_simulation_run_state_validation.cpp  test_simulation_run_state_validation_additional.cpp  test_simulation_run_wind.cpp  test_simulator_config.cpp  test_simulator_config_fidelity.cpp  test_simulator_config_fidelity_branches.cpp  test_simulator_config_mechanics.cpp  (+10 more)
tools/: AGENTS.md  archive_ai_decisions.py  check_instruction_coherence.py  check_scenario_budgets.py  check_test_quality.py  compare_runs.py  coverage_ratchet.py  depcheck.py  export_visualization_vtk.py  lizard_whitelist.txt  run_analysis.py  skills_lint.py  stale_requirements.py  test_skills_lint.py  test_tooling_contracts.py  test_validation_output.py  tracecheck.py  validate_visualization_artifact.py
(+46 files in other folders)
